syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/priviledges/mint";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";
import "realionetwork/asset/v1/token.proto";


message MsgMintToken {
    string to_account = 1;
    uint64 amount = 2;
}